--- a/src/app/templates/layout.html
+++ b/src/app/templates/layout.html
@@ -27,11 +27,14 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{{ url_for('admin.home')}}">Operaciones</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{{ url_for('home.test')}}">Pruebas</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
-    <div class="container text-light">
+    <div class="container-fluid text-light">
       <br>
       {%block content%}
       {%endblock%}
